# web_test

./: Cargo.toml  users.toml
src/: main.rs
static/: index.html
static/templates/: about.html
templates/: chat.html  chat_test.html  contact.html  index.html  lister.html  login.html  search.html
