[package]
name = "web_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.46.1", features = ["full"]}
askama = {version = "0.14.0", features = ["derive"]}
thiserror = "2.0.12"
displaydoc = "0.2"
tower-http = {version = "0.6.6", features = ["fs"]}
tower = "0.5.2"
