[package]
name = "web_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = {version = "1.47.0", features = ["full"]}
askama = {version = "0.14.0", features = ["derive"]}
thiserror = "2.0.12"
displaydoc = "0.2"
tower-http = {version = "0.6.6", features = ["fs"]}
tower = "0.5.2"
serde = {version = "1.0.219", features = ["derive"]}
toml = {version = "0.9.4", features = ["parse","serde"]}
bcrypt = "0.17.0"
tower-cookies = "0.11.0"
